fix(components): 修正弹出菜单隐藏时的 z-index 显示错误

--- a/packages/components/src/menu/dropdown/style.module.css
+++ b/packages/components/src/menu/dropdown/style.module.css
@@ -8,6 +8,6 @@
 
 @layer components {
     .dropdown {
-        @apply border border-palette-border rounded-md;
+        @apply border border-palette-border rounded-md z-popover;
     }
 }
